--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@
 *.RTF	 diff=astextplain
 git filter=lfs diff=lfs merge=lfs -text
 gitignore filter=lfs diff=lfs merge=lfs -text
+README.md filter=lfs diff=lfs merge=lfs -text
