--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,4 @@
 git filter=lfs diff=lfs merge=lfs -text
 gitignore filter=lfs diff=lfs merge=lfs -text
 README.md filter=lfs diff=lfs merge=lfs -text
+binary filter=lfs diff=lfs merge=lfs -text
