--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,4 @@ git filter=lfs diff=lfs merge=lfs -text
 gitignore filter=lfs diff=lfs merge=lfs -text
 README.md filter=lfs diff=lfs merge=lfs -text
 binary filter=lfs diff=lfs merge=lfs -text
+HMTL filter=lfs diff=lfs merge=lfs -text
